test/interaction/Issue2183-no-module.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Set " nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue2183-no-module.agda:11.21-26: error: [Interaction.CaseSplitError] Cannot split on variable n, because it is bound to suc m when checking that the expression ? has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue2183-no-module.agda" . 273)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
